--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -40,11 +40,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Extensions\VirtualMachineExtensions.cs" />
+    <Compile Include="Core\Process\EnumProcessStatus.cs" />
     <Compile Include="Core\Process\ProcessBase.cs" />
+    <Compile Include="Core\Process\ProcessWithUI\Console\ConsoleProcess.cs" />
+    <Compile Include="Core\Process\ProcessWithUI\Html\HtmlProcess.cs" />
+    <Compile Include="Engine\DAL\SerializedProcess.cs" />
+    <Compile Include="Engine\DAL\WorkflowEngineDAL.cs" />
+    <Compile Include="Engine\WorkflowEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserData\Actions\Timeout.cs" />
+    <Compile Include="UserData\UI\Consola\ConsoleRead.cs" />
+    <Compile Include="UserData\UI\Consola\ConsoleWrite.cs" />
+    <Compile Include="UserData\UI\Html\Views\ViewBase.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Data\DataWidget.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Data\ItemsWidget.cs" />
+    <Compile Include="UserData\UI\Html\Widget\ItemsWidget\ComboBox.cs" />
+    <Compile Include="UserData\UI\Html\Widget\ItemsWidget\GridView.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Panels\EnumPanelOrientation.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Panels\PanelDescription.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Simple\DateTimePicker.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Simple\Label.cs" />
+    <Compile Include="UserData\UI\Html\Widget\Simple\TextBox.cs" />
+    <Compile Include="UserData\UI\Html\Widget\WidgetBase.cs" />
+    <Compile Include="UserData\UserDataBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Engine\" />
+    <ProjectReference Include="..\..\Virtual-Machine\VirtualMachine\VirtualMachine\VirtualMachine.csproj">
+      <Project>{31e3551d-66c6-44d9-9950-e3daeca00dca}</Project>
+      <Name>VirtualMachine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
