--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -52,15 +52,24 @@
     <Compile Include="UserData\Actions\Timeout.cs" />
     <Compile Include="UserData\UI\Consola\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\ConsoleWrite.cs" />
-    <Compile Include="UserData\UI\Html\Fluent\FactoryBase.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Panels\DataFormFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Panels\PanelFactory.cs" />
-    <Compile Include="UserData\UI\Html\Fluent\ViewFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Views\ViewFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\WidgetFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Items\GridViewColumnFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Items\GridViewFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Items\ItemsWidgetsFactory.cs" />
+    <Compile Include="UserData\UI\Html\ViewModel\Binding.cs" />
     <Compile Include="UserData\UI\Html\Views\ViewBase.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataWidgets\DataWidget.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataWidgets\ItemsWidget.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\ComboBox.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridView.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridViewColumn.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\ListBox.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Panels\DataForm.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelClear.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelFloat.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelOrientation.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\Panel.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Simple\DateTimePicker.cs" />
