--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Extensions\ObjectExtensions.cs" />
     <Compile Include="Core\Extensions\VirtualMachineExtensions.cs" />
     <Compile Include="Core\Process\EnumProcessStatus.cs" />
     <Compile Include="Core\Process\ProcessBase.cs" />
@@ -52,6 +53,8 @@
     <Compile Include="UserData\Actions\Timeout.cs" />
     <Compile Include="UserData\UI\Consola\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\ConsoleWrite.cs" />
+    <Compile Include="UserData\UI\Html\DataSources\DataSourceBase.cs" />
+    <Compile Include="UserData\UI\Html\DataSources\ObjectDataSource.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Panels\DataFormFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Panels\PanelFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Views\ViewFactory.cs" />
@@ -61,6 +64,8 @@
     <Compile Include="UserData\UI\Html\Fluent\Widgets\Items\ItemsWidgetsFactory.cs" />
     <Compile Include="UserData\UI\Html\ViewModel\Binding.cs" />
     <Compile Include="UserData\UI\Html\Views\ViewBase.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\DataForm\CheckBox.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\DataForm\NumericBox.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataWidgets\DataWidget.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataWidgets\ItemsWidget.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\ComboBox.cs" />
@@ -72,9 +77,9 @@
     <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelFloat.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelOrientation.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\Panel.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Simple\DateTimePicker.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Simple\Label.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Simple\TextBox.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\DataForm\DateTimePicker.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\DataForm\Label.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\DataForm\TextBox.cs" />
     <Compile Include="UserData\UI\Html\Widgets\WidgetBase.cs" />
     <Compile Include="UserData\UserDataBase.cs" />
   </ItemGroup>
@@ -84,7 +89,9 @@
       <Name>VirtualMachine</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="UserData\UI\Html\Fluent\DataForm\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
