--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ExpressionEvaluator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=90d9f15d622e2348, processorArchitecture=MSIL">
+      <HintPath>packages\ExpressionEvaluator.2.0.4.0\lib\net40\ExpressionEvaluator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\EnumWorkfloEngineState.cs" />
     <Compile Include="Core\Extensions\ObjectExtensions.cs" />
     <Compile Include="Core\Extensions\VirtualMachineExtensions.cs" />
     <Compile Include="Core\Process\EnumProcessStatus.cs" />
@@ -57,6 +66,7 @@
     <Compile Include="UserData\UI\Html\DataSources\ObjectDataSource.cs" />
     <Compile Include="UserData\UI\Html\Fluent\DataSources\DataSourceFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Views\DataFormFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Actions\ActionFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Widgets\DataForms\ComboBoxFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Widgets\Panels\DataFormFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Widgets\Panels\PanelFactory.cs" />
@@ -67,6 +77,9 @@
     <Compile Include="UserData\UI\Html\Fluent\Widgets\DataWidgets\ItemsWidgetsFactory.cs" />
     <Compile Include="UserData\UI\Html\ViewModel\Binding.cs" />
     <Compile Include="UserData\UI\Html\Views\ViewBase.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Actions\Action.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Actions\EnumActionPosition.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Actions\EnumActionSize.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataForms\CheckBox.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataForms\NumericBox.cs" />
     <Compile Include="UserData\UI\Html\Widgets\DataWidgets\DataWidget.cs" />
@@ -75,6 +88,7 @@
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridView.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridViewColumn.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\ListBox.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\IWidgetControl.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\DataForm.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelClear.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Panels\EnumPanelFloat.cs" />
@@ -92,7 +106,9 @@
       <Name>VirtualMachine</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
