--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Core\Process\ProcessBase.cs" />
     <Compile Include="Core\Process\ProcessWithUI\Console\ConsoleProcessBase.cs" />
     <Compile Include="Core\Process\ProcessWithUI\Html\HtmlProcessBase.cs" />
-    <Compile Include="Engine\DAL\SerializedProcess.cs" />
+    <Compile Include="Engine\DAL\ProcessContainer.cs" />
     <Compile Include="Engine\DAL\WorkflowEngineDAL.cs" />
     <Compile Include="Engine\WorkflowEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
