--- a/UnitTestWorkflow/UnitTestWorkflow.csproj
+++ b/UnitTestWorkflow/UnitTestWorkflow.csproj
@@ -71,6 +71,9 @@
       <Name>Workflow</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Processes\Arithmetic\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
