--- a/UnitTestWorkflow/UnitTestWorkflow.csproj
+++ b/UnitTestWorkflow/UnitTestWorkflow.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -53,6 +54,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Processes\Generic\UnitTestGenericProcess.cs" />
+    <Compile Include="Processes\UI\BW\UnitTest1.cs" />
+    <Compile Include="Processes\UI\BW\ZapiszMailaJakoDokumentacjeProces.cs" />
     <Compile Include="Processes\UI\ConsoleProcess.cs" />
     <Compile Include="Processes\UI\HelloWorldProcess.cs" />
     <Compile Include="Processes\UI\HtmlProcess.cs" />
