list process - added delete and add

--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -66,6 +66,7 @@
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
     <Compile Include="UserData\UI\Html\DataSources\DataSourceBase.cs" />
+    <Compile Include="UserData\UI\Html\DataSources\EnumDataSource.cs" />
     <Compile Include="UserData\UI\Html\DataSources\ObjectDataSource.cs" />
     <Compile Include="UserData\UI\Html\Fluent\DataSources\DataSourceFactory.cs" />
     <Compile Include="UserData\UI\Html\Fluent\Views\DataFormFactory.cs" />
