--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -66,6 +66,8 @@
     <Compile Include="UserData\Actions\Timeout.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
+    <Compile Include="UserData\UI\Html\DataAnnotations\EditViewAttribute.cs" />
+    <Compile Include="UserData\UI\Html\DataAnnotations\ListViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\DataSources\DataSourceBase.cs" />
     <Compile Include="UserData\UI\Html\DataSources\EnumDataSource.cs" />
     <Compile Include="UserData\UI\Html\DataSources\ObjectDataSource.cs" />
