--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -67,7 +67,9 @@
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
     <Compile Include="UserData\UI\Html\DataAnnotations\EditViewAttribute.cs" />
-    <Compile Include="UserData\UI\Html\DataAnnotations\ListViewAttribute.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridAggregateFunction.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridKnownFunction.cs" />
+    <Compile Include="UserData\UI\Html\DataAnnotations\GridViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\DataSources\DataSourceBase.cs" />
     <Compile Include="UserData\UI\Html\DataSources\EnumDataSource.cs" />
     <Compile Include="UserData\UI\Html\DataSources\ObjectDataSource.cs" />
