--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -67,6 +67,8 @@
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
     <Compile Include="UserData\UI\Html\DataAnnotations\DataFormViewAttribute.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Panels\TabFactory.cs" />
+    <Compile Include="UserData\UI\Html\Fluent\Widgets\Panels\TabsFactory.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridAggregateFunction.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ItemsWidgets\GridKnownFunction.cs" />
     <Compile Include="UserData\UI\Html\DataAnnotations\GridViewAttribute.cs" />
