--- a/UnitTestWorkflow/UnitTestWorkflow.csproj
+++ b/UnitTestWorkflow/UnitTestWorkflow.csproj
@@ -63,6 +63,7 @@
     <Compile Include="UI\Fluent\UnitTest1.cs" />
     <Compile Include="Processes\UI\UnitTestProcesy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\HtmlBuilder\UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Virtual-Machine\VirtualMachine\VirtualMachine\VirtualMachine.csproj">
@@ -76,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Processes\Arithmetic\" />
+    <Folder Include="Processes\UI\Html\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
