--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -144,6 +144,7 @@
     <Compile Include="UserData\UI\Html\Widgets\DropDownListBase.cs" />
     <Compile Include="UserData\UI\Html\Widgets\Grid.cs" />
     <Compile Include="UserData\UI\Html\Widgets\ListBase.cs" />
+    <Compile Include="UserData\UI\Html\Widgets\Panel.cs" />
     <Compile Include="UserData\UI\Html\Widgets\WidgetBase.cs" />
     <Compile Include="UserData\UserDataBase.cs" />
   </ItemGroup>
