--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -72,11 +72,14 @@
     <Compile Include="UserData\UI\Html\Builders\DropDownListBuilderBase.cs" />
     <Compile Include="UserData\UI\Html\Builders\GridBuilder.cs" />
     <Compile Include="UserData\UI\Html\Builders\ListBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Builders\PanelBuilder.cs" />
     <Compile Include="UserData\UI\Html\Builders\ReadOnlyDataSourceBuilder.cs" />
     <Compile Include="UserData\UI\Html\Builders\WidgetBuilderBase.cs" />
     <Compile Include="UserData\UI\Html\Builders\WidgetFactory.cs" />
     <Compile Include="UserData\UI\Html\CrudOperation.cs" />
     <Compile Include="UserData\UI\Html\DataSource.cs" />
+    <Compile Include="UserData\UI\Html\Extensions\DictionaryExtensions.cs" />
+    <Compile Include="UserData\UI\Html\Extensions\ObjectExtensions.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\DataFormViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\EnumControlType.cs" />
     <Compile Include="UserData\UI\Html\Version1\Fluent\Widgets\Panels\TabFactory.cs" />
